--- a/src/assets/sass/utils/_helpers.scss
+++ b/src/assets/sass/utils/_helpers.scss
@@ -30,6 +30,10 @@
     }
 }
 
+.no-scroll {
+    overflow: hidden;
+}
+
 .no-padding {
     padding: 0 !important;
 }
